Correct vertical alignment of grid elements

--- a/modules/_grid.sass
+++ b/modules/_grid.sass
@@ -24,6 +24,7 @@
 	& > :nth-child(2n+1),
 	& > :nth-child(2n)
 		display: inline-block
+    vertical-align: top
 
 		&:not(.grid-child)
 			letter-spacing: 0
@@ -40,6 +41,7 @@
 	& > :nth-child(2n+1),
 	& > :nth-child(2n)
 		display: inline-block
+    vertical-align: top
 
 		&:not(.grid-child)
 			letter-spacing: 0
@@ -56,6 +58,7 @@
 	& > *
 		display: inline-block
 		width: percentage(1/$small_columns)
+    vertical-align: top
 
 		&:not(.grid-child)
 			letter-spacing: 0
